# TaikoChartEstimator

./: .gitignore  README.md  app.py  plot_distribution.py  pyproject.toml  report.jsonl  report.md  report.py  requirements.txt
TaikoChartEstimator/: constants.py
TaikoChartEstimator/data/: __init__.py  dataset.py  tokenizer.py
TaikoChartEstimator/data/v1/: __init__.py  dataset.py  tokenizer.py
TaikoChartEstimator/data/v2/: __init__.py  audio.py  dataset.py  tokenizer.py
TaikoChartEstimator/eval/: __init__.py  evaluator.py  metrics.py
TaikoChartEstimator/model/: __init__.py  losses.py  model.py
TaikoChartEstimator/model/v1/: __init__.py  aggregator.py  encoder.py  model.py
TaikoChartEstimator/model/v2/: __init__.py  encoder.py  heads.py  interpretability.py  losses.py  model.py
TaikoChartEstimator/train/: __init__.py  __main__.py
